Fix bottom padding issue on mobile Safari

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -31,13 +31,13 @@ ul {
 .site-container {
   max-width: 865px;
   width: 90%;
-  margin: 75px auto;
+  margin: 75px auto 0;
   text-align: center;
-  padding: 30px; }
+  padding: 30px 30px 75px; }
   @media screen and (max-width: 900px) {
     .site-container {
-      padding: 0;
-      margin: 75px 0;
+      padding: 0 0 75px;
+      margin: 75px 0 0;
       width: 100%;
       max-width: none; } }
 
