--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -40,13 +40,13 @@ ul {
 .site-container {
     max-width: $max-content-width;
     width: 90%;
-    margin: 75px auto;
+    margin: 75px auto 0;
     text-align: center;
-    padding: 30px;
+    padding: 30px 30px 75px;
 
     @include mediaQuery($breakpoint-900) {
-        padding: 0;
-        margin: 75px 0;
+        padding: 0 0 75px;
+        margin: 75px 0 0;
         width: 100%;
         max-width: none;
     };
